--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,63 @@
 /* google font work sans */
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800&display=swap');
 *{
+    margin: 0;
+    padding: 0  ;
     font-family: 'Work Sans', sans-serif;
+}
+.btn-primary{
+    color: #FFF;
+text-align: center;
+font-size: 20px;
+font-weight: 600;
+border-radius: 8px;
+background: #FF900E;
+padding: 20px 25px;
+border: none;
+}
+.btn-primary:hover{
+    color:#FF900E ;
+    background-color: #FFF;
+}
+
+header{
+    background: rgba(255, 144, 14, 0.10);
+    padding: 50px 240px;
+    
+}
+.header-tittle{
+    color:  #131313;
+font-size: 45px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+}
+header nav{
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+}
+header nav ul{
+    display: flex;
+}
+header nav ul li{
+   margin-right: 20px;
+    list-style: none;
+}
+li a{
+    text-decoration: none;
+    color:#131313 ;
+}
+.banner-tittle{
+    color:  #131313;
+text-align: center;
+font-size: 64px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+}
+.banner-content{
+    max-width: 810px;
+    text-align: center;
+   margin: 0 auto;
 }
