--- a/styles/style.css
+++ b/styles/style.css
@@ -84,6 +84,7 @@ main{
 .feature-container-img img{
     border: 1px solid black;
     border-radius: 10px;
+    width: 100%;
 }
 .feature-container{
     margin-top: 80px;
@@ -94,21 +95,43 @@ main{
     padding-left: 70px;
     padding-right: 70px;
 }
+.fact-img-container{
+    gap: 20px;
+    margin-top: 100px;
+    display: flex;
+    justify-content: space-around;
+}
 
+.fact{
+    margin-top: 70px;
+}
+.fact-img{
+    text-align: center;
+    border-radius: 8px;
+border: 1px solid #FF900E;
+padding: 30px;
+}
 /* respnsive section */
 @media screen and (max-width:576px) {
     header{
         padding: 20px;
     }
-    nav, .feature-container{
-        flex-direction: column-reverse;
+    nav, .feature-container, .fact-img-container{
+        flex-direction: column;
     }
     .feature-container-img{
         grid-template-columns: 1fr;
         margin-top: 20px;
+     
       
     }
-    
+        
+    .fact-img{
+        margin: 10px;
+
+      
+    }
+
     .feature-content{
         padding-left: 20px;
         padding-right: 20px;
@@ -116,14 +139,19 @@ main{
 }
 @media screen and (min-width:576px) and  (max-width:992px) {
     header{
-        padding: 20px;
+        padding: 10px;
     }
     nav,  .feature-container
     {
         flex-direction: column;
     }
     .feature-content{
-        padding-left: 50px;
-        padding-right: 50px;
+        padding-left: 30px;
+        padding-right: 30px;
     }
+    .fact-img-container{
+        margin: 30px
+      
+    }
+    
 }
