--- a/styles/style.css
+++ b/styles/style.css
@@ -111,6 +111,17 @@ main{
 border: 1px solid #FF900E;
 padding: 30px;
 }
+footer{
+    max-width:1440px;
+    margin: 100px auto;
+}
+.footer-section{  
+    border-radius: 8px;
+    background: #FFF4E7;
+    
+    padding: 40px 410px;
+    text-align: center;
+}
 /* respnsive section */
 @media screen and (max-width:576px) {
     header{
@@ -136,6 +147,9 @@ padding: 30px;
         padding-left: 20px;
         padding-right: 20px;
     }
+    .footer-section{
+        padding: 10px 10px;
+    }
 }
 @media screen and (min-width:576px) and  (max-width:992px) {
     header{
@@ -153,5 +167,7 @@ padding: 30px;
         margin: 30px
       
     }
-    
+    .footer-section{
+        padding: 15px 150px;
+    }
 }
